# surround

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  Cask  Makefile  README.md  README.org  pyproject.toml  surround.el
.bin/: add-checkdoc-el.sh  add-minimal-emacs.sh  pull-checkdoc-el.sh  pull-minimal-emacs.sh
.ci/: batch-byte-compile.sh  batch-checkdoc.sh  batch-flycheck.sh  batch-relint.sh
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  pre-commit-update.yml  scorecard.yml  tests.yml
checkdoc-batch/: LICENSE  Makefile  checkdoc-batch.el
checkdoc-batch/.github/workflows/: test.yml
example/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  example.html  example.md  example.org  hello.cpp  name.cpp  name.hpp  name.test.cpp  pyproject.toml
example/.emacs.d/: init.el
example/.github/: dependabot.yml
example/.github/workflows/: ci_tests.yml  codeql.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  test_makefile.yaml
example/cmake/: gcovr.cfg.in
example/docs/: Doxyfile
example/infra/cmake/: use-fetch-content.cmake
example/installtest/: CMakeLists.txt  test.cpp
example/src/examples/: CMakeLists.txt  hello.cpp
example/src/smd/example/: CMakeLists.txt  name.cpp  name.hpp  name.test.cpp
