[project]
name = "concept-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "clang-format==22.1.3",
  "cmake==4.3.1",
  "gcovr>=8.6",
  "mbake==1.4.6",
  "ninja>=1.13",
  "pre-commit>=4.5.1",
  "shellcheck-py>=0.11"
]
